--MULTISITE-630 Fix display problem on IE7

--- a/sites/all/themes/ec_default/css/less/style.less
+++ b/sites/all/themes/ec_default/css/less/style.less
@@ -152,6 +152,9 @@ ul {
     border-color: darken(@body_color,15%);
     li { border-color: darken(@body_color,15%); }
   }
+  li.block-print {
+    list-style: none !important;
+  }
 }
 
 /* ------------------ Header ------------------ */
